--- a/CSS/mainStyle.css
+++ b/CSS/mainStyle.css
@@ -5,6 +5,7 @@
 
 body{
     font-family: 'Poppins', sans-serif;
+    background-color: #0D161F;
 }
 
 body, h1, h2, h3, h4, h5, h6, p, ul, li, a{
@@ -86,9 +87,7 @@ img{
 
 }
 
-.main{
-    background-color: rgba(0,0,0,0.25);
-}
+
 
 .agents-bg{
     max-width: 100%;
@@ -106,7 +105,8 @@ img{
     border: 4px solid green;
 }
 
-.agents-tittle{
+.tittle{
+    text-decoration: none;
     font-weight: normal;
     font-style: italic;
     margin: 0 auto;
