--- a/CSS/mainStyle.css
+++ b/CSS/mainStyle.css
@@ -11,6 +11,9 @@ body{
 body, h1, h2, h3, h4, h5, h6, p, ul, li, a{
     margin: 0;
     padding: 0;
+    text-decoration: none;
+    font-weight: normal;
+
 }
 
 ul{
@@ -102,7 +105,7 @@ img{
 .agents-container{
     margin: 0 auto;
     max-width: 76.5em;
-    border: 4px solid green;
+
 }
 
 .tittle{
@@ -113,4 +116,81 @@ img{
     color: white;
     font-size:2.5em;
     text-transform: uppercase;
+}
+
+.maps-container{
+    margin: 0 auto;
+    max-width: 76.5em;
+    padding-bottom: 46.5em;
+    
+}
+
+.weapons-header{
+    margin: 0 auto;
+    max-width: 76.5em;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+
+}
+
+.weapons-img{
+    margin-left: 1.5em;
+}
+
+.weapons-container{
+    margin: 0 auto;
+    max-width: 82em;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.weapons-left{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
+}
+
+.weapon-tittle{
+    margin-left: 1.8em;
+    font-size: 1.5em;
+    color: white;
+    padding-bottom: 20px;
+    padding-top: 40px;
+    text-decoration: none;
+    font-weight: medium;
+}
+
+.arrow-left{
+    padding-right: 26px;
+}
+
+.arrow-right{
+    margin-left: 26px;
+}
+
+
+.weapons-border{
+    border: 1px solid #FFFFFF;
+    width: 325px;
+    height: 194px;
+}
+
+.weapons-img{
+    align-items: center;
+    padding: 1.5em;
+
+}
+
+.weapons-right{
+    
+}
+
+.weapons-card{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
