--- a/CSS/agentesStyle.css
+++ b/CSS/agentesStyle.css
@@ -198,3 +198,24 @@
     align-self: center;
     
 }
+
+.search-container fieldset{
+    max-width: 100%;
+    margin-bottom: 25px;
+    z-index: 9;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+}
+
+.search-container legend{
+    color: white;
+}
+
+.search-box{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
