--- a/CSS/mainStyle.css
+++ b/CSS/mainStyle.css
@@ -428,10 +428,12 @@ img{
 
 .arrow-left{
     padding-right: 26px;
+    cursor: pointer;
 }
 
 .arrow-right{
     margin-left: 26px;
+    cursor: pointer;
 }
 
 
