--- a/CSS/mainStyle.css
+++ b/CSS/mainStyle.css
@@ -39,16 +39,9 @@ img{
     background-size: cover;
     position: relative;
     padding-bottom: 45rem;
-}
-
-.header-valorant{
-    position: absolute;
-    top: 85%;
-    left: 25%
-   
     
-
 }
+
 
 .header-top{
     max-width: 76.5em;
@@ -59,8 +52,8 @@ img{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    border-bottom: 1px solid gray;
     align-items: center;
+    border-bottom: 2px solid gray;
 }
 
 .header-nav ul{
@@ -83,6 +76,16 @@ img{
 .header-nav ul li a:hover{
     color:#E13157;
 }
+
+.header-valorant{
+  position: absolute;
+  top: 85%;
+  left: 25%
+ 
+  
+
+}
+
 
 
 
@@ -245,9 +248,6 @@ img{
     margin: 0 auto;
     max-width: 76.5em;
     
-}
-
-.agentCard:hover{
 }
 
 
@@ -448,22 +448,27 @@ img{
 }
 
 
-.weapons-border{
-    border: 1px solid #FFFFFF;
-    width: 325px;
-    height: 194px;
-}
-
 .weapons-img{
+    justify-content: center;
     align-items: center;
     padding: 1.5em;
 
 }
 
 .weapons-card{
+    
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+}
+
+.weapons-border{
+  border: 1px solid #FFFFFF;
+  width: 325px;
+  height: 194px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .download-bg{
@@ -532,39 +537,121 @@ img{
     margin-right: 15px;
 }
 
+.suport{
+  margin-bottom: 50px;
+}
 
 .suport-container{
     max-width: 100%;
-    padding-bottom: 46.5em;
-
-}
-.suport-container{
     margin: 0 auto;
-    max-width: 76.5em;
 }
 
 .suport-bg{
+    margin: 0 auto;
+    max-width: 76.5em;
     background: white;
     border-radius: 5px;
-    opacity: 1;
-    padding: 50px;
+    display: grid;
+    padding: 25px;
+    padding-left: 50px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas:
+    "suport-title suport-title vazio"
+    "supName supLastName supImg"
+    "supMail supNickName supImg"
+    "supSubject supSubject supImg"
+    "supTxt supTxt supImg"
+    "nada supBtn nadinha"
+    ;
+    gap: 8px;
+    align-items: center;
 }
+
+.suport-title{
+  display: grid;
+  grid-area: suport-title;
+  text-transform: uppercase;
+  font-size: 3em;
+}
+
+.supName{
+  display: grid;
+  grid-area: supName;
+  color: #133052;
+  font-weight: bold;
+
+}
+
+.supLastName{
+  display: grid;
+  grid-area: supLastName;
+  color: #133052;
+  font-weight: bold;
+}
+
+.supMail{
+  display: grid;
+  grid-area: supMail;
+  color: #133052;
+  font-weight: bold;
+}
+
+.supNickName{
+  display: grid;
+  grid-area: supNickName;
+  color: #133052;
+  font-weight: bold;
+}
+
+.supImg{
+  display: grid;
+  grid-area: supImg;
+  justify-content: center;
+}
+.supSubject{
+  display: grid;
+  grid-area: supSubject;
+  color: #133052;
+  font-weight: bold;
+}
+.supTxt{
+  display: grid;
+  grid-area: supTxt;
+  color: #133052;
+  font-weight: bold;
+}
+.supBtn{
+  display: grid;
+  grid-area: supBtn;
+  justify-content: right;
+}
+
+.btn-form{
+  color: white;
+  margin: 0 auto;
+  padding: 0.8em;
+  background: #E13157 0% 0% no-repeat padding-box;
+  border: 1px solid #E13157;
+  border-radius: 5px;
+  opacity: 1;
+  text-transform: uppercase;
+  font-size: 1em;
+  font-weight: normal;
+  padding: 15px 30px 15px 30px;
+  margin-top: 35px;
+  cursor: pointer;
+}
+.btn-form:hover{
+  color: black;
+
+}
+
+
+
 
 .suport-title{
     color: #04254C;
     font-weight: normal;
     font-size: 3em;
     font-style: italic;
-}
-
-.suport-form{
-    margin: 0 auto;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-    
-}
-
-.suport-form input{
-    margin: 15px 10px 10px auto;
 }
