--- a/CSS/slidesShow.css
+++ b/CSS/slidesShow.css
@@ -4,7 +4,7 @@
   max-width: 100%;
   height: 500px;
   margin-top: 5em;
-  margin-bottom: 50em;
+  margin-bottom: 30em;
 }
 
 .maps-container-default{
@@ -23,12 +23,11 @@
 }
 
 .tittle-maps{
-  cursor:pointer;
   margin-top: 25px;
 }
 
 .container-seeMore-maps{
-  border-top: 1px solid #E13157;
+  border-bottom: 1px solid #E13157;
   max-width: 40em;
   margin-top: 35px;
   margin-bottom: 5em;
@@ -42,12 +41,12 @@
   color: #E13157;
   cursor:pointer;
   margin-right: 50px;
-  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 
 .slideshow-container{
-  max-width: 55.5em;
+  max-width: 100%;
   position: relative;
   margin: auto;
 }
@@ -63,7 +62,7 @@
     border-radius: 20px;
 }
 
-.prev, .next {
+.prev, .next{
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -79,13 +78,13 @@
 }
 
 /* Position the "next button" to the right */
-.next {
+.next{
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
+.prev:hover, .next:hover{
   background-color: rgba(0,0,0,0.8);
 }
 
@@ -110,7 +109,7 @@
 }
 
 /* The dots/bullets/indicators */
-.dot {
+.dot{
   cursor: pointer;
   height: 15px;
   width: 15px;
@@ -121,9 +120,7 @@
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
-  background-color: #717171;
-}
+.active, .dot:hover, 
 
 .fade {
   -webkit-animation-name: fade;
@@ -145,4 +142,103 @@
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
+}
+
+
+
+/* guns css*/
+
+* {box-sizing: border-box}
+.slidesPrimaryGun {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.weapons-border {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prevGuns, .nextGuns  {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.nextGuns  {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prevGuns:hover, .nextGuns:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.textPriGuns {
+  color: #f2f2f2;
+  font-size: 15px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dotGuns {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dotGuns:hover{
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prevGuns, .nextGuns,.text {font-size: 11px}
 }
