--- a/CSS/mainStyle.css
+++ b/CSS/mainStyle.css
@@ -624,28 +624,60 @@ img{
   font-size: 1.25em;
 }
 
+
+
+
 .suportFontStyle{
   background: #FFFFFF 0% 0% no-repeat padding-box;
   font-size: 1em;
   border: 1px solid #133052;
   border-radius: 5px;
   opacity: 1;
-  font-family: roboto;
 
 }
 
-.suportFontStyle::placeholder{
-  color:#133052;
-  padding-left: 2px;
-}
+
 
 .supName{
   display: grid;
   grid-area: supName;
   color: #133052;
   font-weight: bold;
+  position: relative;
 
 }
+
+.formNameClass{
+  min-width: 300px;
+  height: 35px;
+  margin-top: 25px;
+  padding: 0 15px;
+
+  border: 1px solid #04254C;
+  border-radius: 5px;
+  outline: none;
+
+  transform-origin: top left;
+  font-size: 1em;
+}
+
+.name-placeholder{
+position: absolute;
+top: 30px;
+left: 15px;
+transition: 0.3s all;
+}
+
+.formNameClass:focus + .name-placeholder,
+.formNameClass:not(:placeholder-shown) + .name-placeholder{
+  top: 13px;
+  background-color: white;
+  padding: 0 1px;
+  transition: 0.3s all;
+
+}
+
+
 
 .supLastName{
   display: grid;
