--- a/CSS/mainStyle.css
+++ b/CSS/mainStyle.css
@@ -40,13 +40,18 @@ img{
     background-position: center;
     background-size: cover;
     position: relative;
-    padding-bottom: 45rem;
-    
+    padding-bottom: 45em;
+}
+
+.header-container-top{
+  width: 100%;
+  margin: 0 auto;
+  border-bottom: 2px solid gray;
 }
 
 
 .header-top{
-    max-width: 76.5em;
+    width: 76.5em;
     margin: 0 auto;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -55,7 +60,6 @@ img{
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 2px solid gray;
 }
 
 .header-nav ul{
@@ -64,6 +68,8 @@ img{
 }
 
 .header-nav ul li{
+    display: flex;
+    flex-wrap: wrap;
     margin-left: 2.5em;
     color: #FFFFFF;
     font-size: 0.875em;
@@ -72,6 +78,8 @@ img{
 }
 
 .header-nav ul li a{
+  display: flex;
+  flex-wrap: wrap;
     color: white;
 }
 
@@ -80,6 +88,8 @@ img{
 }
 
 .header-valorant{
+  display: flex;
+  flex-wrap: wrap;
   position: absolute;
   bottom: 0px;
   left: 50%;
@@ -263,8 +273,8 @@ img{
     width: 100%;
     height: 100%;
     position: relative;
-    padding-bottom: 100px;
-    padding-top: 100px;
+    padding-bottom: 6.25em;
+    padding-top: 6.25em;
 
 }
 
@@ -314,6 +324,7 @@ img{
 
   .agentCard:hover{
     border: 1px solid #E13157;
+    transform: scale(1.05);
   }
 
   .agentCard, .newAgentCard, .seeAllAgentCards{
@@ -395,16 +406,21 @@ img{
     text-align: center;
     font-weight: 500;
     font-size: 1.5em;
+    background: linear-gradient(#5f5f5f67, black );
+
+  }
+
+  .agentCard h4:hover{
+    background: linear-gradient(#ff999967, #E13157);
   }
   
   #cardContainer{
     display: flex;
     flex-wrap: wrap;
+   
   }
 
-  .agentImage:hover{
-    transform: scale(1.05);
-  }
+  
 
   .maps-cards{
       display: flex;
@@ -420,8 +436,7 @@ img{
     background-repeat: no-repeat;
     background-position: center bottom;
     background-size: cover;
-    border-top: solid 1px #E13157;
-    border-bottom: solid 1px #E13157;
+    
 }
 
 
